# City-Growth-Prediction

./: README.md
CityGrowthPrediction/: CMakeLists.txt  README.md  main.cpp
CityGrowthPrediction/include/: city_data.hpp  city_growth_model.hpp  neural_network.hpp
CityGrowthPrediction/src/: city_data.cpp  city_growth_model.cpp  neural_network.cpp
